Performance enhancement replacing new Character() with Character.valueOf()